--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,11 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font-style: normal;
-  background-image: url("bg.png");
+   height: 100%;
+   background: url("bg.png") no-repeat;
+   background-attachment: fixed;
+   background-position: center center;
+   background-size: cover; 
   
 }
 
@@ -43,8 +47,19 @@ body {
     'Noto Sans KR',
     'Noto Sans',
     sans-serif;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px rgb(255, 255, 255);
     position: absolute;
-    bottom: 3%;
+    bottom: 2%;
     left: 2%;
+}
+.cbox{
+    position: absolute;
+    bottom: 5%;
+    right: 2%;
+}
+.top{
+    position: absolute;
+    top: 0%;
+    right: -8%;    
+    width: 40vw;
 }
